<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/leaguesBackgroundImage"
        style="@style/BackGroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:alpha="1.0"
        app:srcCompat="@drawable/home_background"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/backgroundAnimation"
        style="@style/BackGroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.8"
        app:srcCompat="@drawable/background_animation"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.leagues.LeaguesActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/league3Image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:src="@drawable/league_3" />

            <TextView
                android:id="@+id/league3Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:shadowColor="@android:color/black"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:text="@string/league_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorLeague3" />

            <TextView
                android:id="@+id/league3Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:drawableEnd="@drawable/trophy"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/league_3_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorLighterGrey" />

            <TextView
                android:id="@+id/league3Difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/league_3_difficulty"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorLightGrey" />

            <ImageView
                android:id="@+id/league2Image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:src="@drawable/league_2" />

            <TextView
                android:id="@+id/league2Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:shadowColor="@android:color/black"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:text="@string/league_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorLeague2" />

            <TextView
                android:id="@+id/league2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:drawableEnd="@drawable/trophy"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/league_2_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorLighterGrey" />

            <TextView
                android:id="@+id/league2Difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/league_2_difficulty"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorLightGrey" />

            <ImageView
                android:id="@+id/league1Image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:src="@drawable/league_1" />

            <TextView
                android:id="@+id/league1Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:shadowColor="@android:color/black"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:text="@string/league_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorLeague1" />

            <TextView
                android:id="@+id/league1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:drawableEnd="@drawable/trophy"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/league_1_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorLighterGrey" />

            <TextView
                android:id="@+id/league1Difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/league_1_difficulty"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorLightGrey" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:includeFontPadding="false"
        android:text="@string/cross"
        android:textColor="@color/colorDrawYellow"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>