...
        app:layout_constraintBottom_toBottomOf="@+id/leagueImage"
        app:layout_constraintEnd_toStartOf="@id/leagueImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/leagueImage">

        <ImageView
            android:id="@+id/shopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/shop_button"
            tools:ignore="ContentDescription" />
...
